--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Prem Sai Noolu",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "mongoose": "^8.7.1"
   }
 }
