--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.21.0",
-    "mongoose": "^8.7.1"
+    "mongoose": "^8.7.1",
+    "validator": "^13.12.0"
   }
 }
