securing data using dotenv file

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
+PORT = 9999
+DB_CONNECTION_SECRET="mongodb+srv://Premsai:oRNfscfvomHe8DpH@namastenode.rdsee.mongodb.net/devTinder"
+JWT_SECRET="Dev@Tinder@1320"
 AWS_ACCESS_KEY="AKIAYS2NVCX2DNPNF7KH"
 AWS_SECRET_KEY="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"
