--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ PORT = 9999
 DB_CONNECTION_SECRET="mongodb+srv://Premsai:INoUOQj33DhiZRiJ@namastenode.rdsee.mongodb.net/devTinder"
 
 JWT_SECRET="Dev@Tinder@1320"
-AWS_ACCESS_KEY="AKIAYS2NVCX2DNPNF7KH"
-AWS_SECRET_KEY="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"
+AWS_ACCESS_KEY="AKIA2NPM3GWAPDUUG2FN"
+AWS_SECRET_KEY="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"
